2012-02-01  Paolo Carlini  <paolo.carlini@oracle.com>

	PR libstdc++/51795
	* include/bits/random.h (linear_congruential_generator): Add
	static_assert preventing instantiation for values of 'a' and 'm'
	currently handled incorrectly by _Mod::__calc.
	* include/bits/random.tcc (seed_seq::generate): Avoid unsafe
	uses of _Mod::__calc.

2012-01-03  Chase Douglas  <chase.douglas@canonical.com>
	    Jonathan Wakely  <jwakely.gcc@gmail.com>

	* include/bits/shared_ptr.h: Default copy ctor and assignment.
	* include/bits/shared_ptr_base.h: Likewise.
	* testsuite/20_util/shared_ptr/cons/43820_neg.cc: Adjust dg-error
	line numbers.
	* testsuite/20_util/weak_ptr/comparison/cmp_neg.cc: Likewise.

2011-12-30  Paolo Carlini  <paolo.carlini@oracle.com>

	PR libstdc++/51711
	* include/bits/regex.h (regex_replace): Fix thinko.
	* testsuite/28_regex/algorithms/regex_replace/char/51711.cc: New.
	* testsuite/28_regex/algorithms/regex_replace/wchar_t/51711.cc:
	Likewise.

2011-12-19  Jonathan Wakely  <jwakely.gcc@gmail.com>

	PR libstdc++/51626
	* include/bits/stl_uninitialized.h (_Construct_default_a_impl): Define
	overloaded functions to conditionally use allocator::construct.
	(_Construct_default_a): Define to dispatch to appropriate
	_Construct_default_a_impl overload.
	(__uninitialized_default_a, __uninitialized_default_n_a): Use
	_Construct_default_a.
	* testsuite/20_util/allocator/51626.cc: New.

2011-12-19  Jonathan Wakely  <jwakely.gcc@gmail.com>

	* testsuite/ext/type_traits/remove_unsigned_integer_neg.cc: Adjust
	dg-error line numbers.
	* testsuite/ext/type_traits/add_unsigned_floating_neg.cc: Likewise.
	* testsuite/ext/type_traits/remove_unsigned_floating_neg.cc: Likewise.
	* testsuite/ext/type_traits/add_unsigned_integer_neg.cc: Likewise.

2011-12-19  Jonathan Wakely  <jwakely.gcc@gmail.com>

	* include/c_global/cmath: Update copyright years.
	* include/ext/type_traits.h: Likewise.

2011-12-19  Jonathan Wakely  <jwakely.gcc@gmail.com>

	Backport from mainline